[package]
name = "yttria-coding"
version = "0.1.1"
authors = ["Trevor Klingler"]
description = "A mathematical coding library tailored for use with the yttria set of libraries"
readme = "readme.md"
repository = "https://github.com/yttria-rs/yttria-coding"
license = "MPL-2.0"
keywords = ["dsp", "radio", "math"]
categories = ["mathematics"]
edition = "2021"


[features]

[dependencies]
